# grapenlp-core

./: .gitignore  .travis.yml  CHANGES  CHANGES.md  CMakeLists.txt  CODEOWNERS  LICENSE  README.md  description.txt  transient_data.h  ul_manager.h
assoc_container_impl_selector/: CMakeLists.txt
assoc_container_impl_selector/src/: map_impl_selector.cpp  multimap_impl_selector.cpp  multiset_impl_selector.cpp  set_impl_selector.cpp
breadth_first_parsing/: CMakeLists.txt
breadth_first_parsing/src/: breadth_first_parser.cpp  breadth_first_parser_no_output.cpp  lua_breadth_first_parser.cpp  lua_breadth_first_parser_no_output.cpp  luaw_breadth_first_parser.cpp  luaw_breadth_first_parser_no_output.cpp  lx_breadth_first_parser.cpp  lx_breadth_first_parser_no_output.cpp  lxw_breadth_first_parser.cpp  lxw_breadth_first_parser_no_output.cpp
cgrapenlp/: CMakeLists.txt
cgrapenlp/src/: nlp.cpp
compressed_delaf/: CMakeLists.txt
compressed_delaf/src/: bin_delaf.cpp  bin_delaf_reader.cpp  cdump-en.cpp  cdump-fr.cpp  cdump.cpp  compressed_delaf_entry_filter.cpp  compressed_delaf_entry_filter_factory.cpp  compressed_delaf_reader.cpp  decompress_delaf_writer.cpp  filter_compressed_delaf.cpp  inf_delaf.cpp  inf_delaf_reader.cpp
compressed_delaf/test/: test_compressed_delaf.cpp
delaf/: CMakeLists.txt
delaf/src/: delaf_entry_filter_default_weight.cpp  delaf_entry_filter_type.cpp  u_delaf_constants.cpp  u_delaf_entry_filter_codes.cpp
depth_first_parsing/: CMakeLists.txt
depth_first_parsing/src/: depth_first_parser.cpp  depth_first_parser_no_output.cpp  lua_depth_first_parser.cpp  lua_depth_first_parser_no_output.cpp  luaw_depth_first_parser.cpp  luaw_depth_first_parser_no_output.cpp  lx_depth_first_parser.cpp  lx_depth_first_parser_no_output.cpp  lxw_depth_first_parser.cpp  lxw_depth_first_parser_no_output.cpp
earley_parsing/: CMakeLists.txt
earley_parsing/src/: earley_parser.cpp  earley_parser_no_output.cpp  lua_earley_parser.cpp  lua_earley_parser_no_output.cpp  luaw_earley_parser.cpp  luaw_earley_parser_no_output.cpp  lx_earley_parser.cpp  lx_earley_parser_no_output.cpp  lxw_earley_parser.cpp  lxw_earley_parser_no_output.cpp
fprtn/: CMakeLists.txt
fprtn/src/: a_fprtn.cpp  aw_fprtn.cpp  fprtn.cpp  fprtn_test.cpp  ua_fprtn.cpp  uaw_fprtn.cpp  ux_fprtn.cpp  uxw_fprtn.cpp  x_fprtn.cpp  xw_fprtn.cpp
fprtn_to_dot_serializer/: CMakeLists.txt
fprtn_to_dot_serializer/src/: fprtn_to_dot_serializer.cpp  inv_fprtn_to_dot_serializer.cpp
fst/: CMakeLists.txt
fst/src/: fst.cpp  u_fst.cpp
fst2_constants/: CMakeLists.txt
fst2_reader/: CMakeLists.txt
fst2_reader/src/: float_w_fst2_tag_output_reader.cpp  int_w_fst2_tag_output_reader.cpp  t_fst2_tag_output_reader.cpp  tw_fst2_tag_output_reader.cpp  ua_fst2_tag_output_reader.cpp  uaw_fst2_tag_output_reader.cpp  ul_fst2_reader.cpp  ult_fst2_reader.cpp  ultw_fst2_reader.cpp  ulua_fst2_reader.cpp  uluaw_fst2_reader.cpp  ulw_fst2_reader.cpp  ulx_fst2_reader.cpp  ulxw_fst2_reader.cpp  w_fst2_tag_output_reader.cpp  x_fst2_tag_output_reader.cpp  xw_fst2_tag_output_reader.cpp
fst2_reader/test/: test_creader.cpp  test_ctreader.cpp  test_ctwreader.cpp  test_cwreader.cpp  test_cxreader.cpp  test_cxwreader.cpp  test_reader.cpp  test_rtno.cpp  test_treader.cpp  test_twreader.cpp  test_wreader.cpp  test_xreader.cpp  test_xwreader.cpp
html/: CHANGES.html  (+2461 more)
jgrape/: CMakeLists.txt
jgrapenlp/: CMakeLists.txt
latex_hbar_chart/: CMakeLists.txt
latex_hbar_chart/src/: latex_hbar_chart.cpp
lexmask/: CMakeLists.txt
lexmask/src/: lexmask.cpp  lexmask_and_coarse_type.cpp  lexmask_default_weight.cpp  meta_code_dico.cpp  u_constrained_dico_word_meta_mask_factory.cpp  u_lexmask.cpp  u_lexmask_and_coarse_type.cpp  u_lexmask_factory.cpp
lexmask/test/: lexmask_test.cpp
libgrape/: CMakeLists.txt
libgrape/src/: ualxiw_manager.cpp
libgrapenlp/: CMakeLists.txt
lrb_tree/: CMakeLists.txt
lrb_tree/src/: lrb_tree.cpp  lrb_tree_map.cpp  lrb_tree_map_3w.cpp  lrb_tree_multimap.cpp  lrb_tree_multimap_3w.cpp  lrb_tree_multiset.cpp  lrb_tree_multiset_3w.cpp  lrb_tree_set.cpp  lrb_tree_set_3w.cpp
lrb_tree/test/: lrb_tree_efficiency.cpp  lrb_tree_map_test.cpp  lrb_tree_multimap_test.cpp  lrb_tree_multiset_test.cpp  lrb_tree_set_test.cpp
lrb_tree_to_dot_serializer/: CMakeLists.txt
lrb_tree_to_dot_serializer/src/: lrb_tree_to_dot_serializer.cpp
machine/: CMakeLists.txt
machine/src/: tag_input_traits.cpp  tag_serializer_traits.cpp  weight_traits.cpp  weighted_tag_output_traits.cpp
manager/: CMakeLists.txt
manager/src/: ul_manager.cpp
out_serializer/: CMakeLists.txt
out_serializer/src/: movistarbot_out_serializer.cpp  movistarbot_phone_digit_separator_set.cpp  movistarbot_tag_dico.cpp  movistarbot_weighted_out_serializer.cpp
output_fprtn/: CMakeLists.txt
output_fprtn/src/: a_output_fprtn.cpp  aw_output_fprtn.cpp  lua_output_fprtn.cpp  luaw_output_fprtn.cpp  lux_output_fprtn.cpp  luxw_output_fprtn.cpp  output_fprtn.cpp  ua_output_fprtn.cpp  uaw_output_fprtn.cpp  ux_output_fprtn.cpp  uxw_output_fprtn.cpp  x_output_fprtn.cpp  xw_output_fprtn.cpp
output_fprtn_blackboard_set_expander/: CMakeLists.txt
output_fprtn_blackboard_set_expander/src/: a_fprtn_blackboard_set_expander.cpp  aw_fprtn_blackboard_set_expander.cpp  fprtn_blackboard_set_expander.cpp  lua_fprtn_blackboard_set_expander.cpp  luaw_fprtn_blackboard_set_expander.cpp  lux_fprtn_blackboard_set_expander.cpp  luxw_fprtn_blackboard_set_expander.cpp  ua_fprtn_blackboard_set_expander.cpp  uaw_fprtn_blackboard_set_expander.cpp  ux_fprtn_blackboard_set_expander.cpp  uxw_fprtn_blackboard_set_expander.cpp  x_fprtn_blackboard_set_expander.cpp  xw_fprtn_blackboard_set_expander.cpp
output_fprtn_breadth_first_expander/: CMakeLists.txt
output_fprtn_breadth_first_expander/src/: a_fprtn_breadth_first_expander.cpp  aw_fprtn_breadth_first_expander.cpp  fprtn_breadth_first_expander.cpp  lua_fprtn_breadth_first_expander.cpp  luaw_fprtn_breadth_first_expander.cpp  (+8 more)
output_fprtn_prune/: CMakeLists.txt
output_fprtn_to_dot_serializer/: CMakeLists.txt
output_fprtn_top_prune/: CMakeLists.txt
(+2139 files in other folders)
